--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,24 +1,25 @@
-fastapi
-uvicorn[standard]
-python-multipart
-python-dotenv
-python-jose[cryptography]
-passlib[bcrypt]
-pydantic[email]
-email-validator
-supabase
-groq
-sentence-transformers
-transformers
-tokenizers
-huggingface_hub
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic[email]==2.4.2
+email-validator==2.1.0
+supabase==2.0.2
+httpx==0.24.1
+groq==0.4.1
+sentence-transformers==2.2.2
+transformers==4.35.0
+tokenizers==0.14.1
+huggingface_hub==0.17.3
 tiktoken==0.7.0
 faiss-cpu==1.11.0.post1
 numpy==2.3.2
-PyPDF2
-python-docx
-aiofiles
-beautifulsoup4
-requests
-lxml
-Pillow
+PyPDF2==3.0.1
+python-docx==1.1.0
+aiofiles==23.2.0
+beautifulsoup4==4.12.2
+requests==2.31.0
+lxml==4.9.3
+Pillow==10.1.0
